Horizontal scrollbar is displayed - Fix for secondary items causing a horizontal scrollar

--- a/src/components/main-navigation/style.less
+++ b/src/components/main-navigation/style.less
@@ -32,7 +32,7 @@
       transition: box-shadow 0.15s ease-in-out;
     }
     .navbar-nav.navbar-right:last-child {
-      margin-right: 5px;
+      margin-right: 10px;
       -webkit-transition: margin-right 100ms ease;
       -moz-transition: margin-right 100ms ease;
       -o-transition: margin-right 100ms ease;
